fix bug of long unbroken tweets not wrapping

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -41,6 +41,7 @@ article:hover {
 .tweet-content > p {
   margin: auto;
   padding-left: 15px;
+  word-break: break-word;
 }
 
 .line {
